kubernetes/ingress/ingress.yaml
# Kubernetes API version
apiVersion: networking.k8s.io/v1

# Resource type
kind: Ingress

metadata:
  # Ingress ka naam
  name: url-shortener-ingress
  
  # Namespace
  namespace: url-shortener

  # Ye annotations do kaam karti hain:
  # 1. cert-manager ko batati hain certificate kis issuer se lena hai
  # 2. NGINX ko HTTP se HTTPS redirect enforce karne ko kehti hain
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  # Is Ingress ko NGINX Controller handle karega
  ingressClassName: nginx

  # TLS block me host aur secretName match hone chahiye
  # cert-manager isi host ke liye certificate issue karke ye secret banayega
  tls:
    - hosts:
        - project.salmandevops.dpdns.org
      secretName: url-shortener-tls  # Is naam ka secret cert-manager khud banayega

  rules:
    - host: project.salmandevops.dpdns.org
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
